Attempting to prevent Chrome from highlighting clicked items on mobile devices

--- a/piinterface-ui/src/assets/skins/_common/style.css
+++ b/piinterface-ui/src/assets/skins/_common/style.css
@@ -448,3 +448,13 @@ body {
         transform: translateX(16px);
     }
 }
+
+* {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+}
